libtrcore = shared_library('trcore',
           'core/trcore.cpp',
           'core/buffer.cpp',
           'core/texture.cpp',
           'core/program.cpp',
           'core/skybox.cpp',
           'core/utils.cpp',
           dependencies : [
             dep_glm,
             ],
           link_args : '-pthread',
           include_directories : include_dir,
           install : true)

